# tiktok-auto

./: .env.example  .gitignore  PHASE4_TODO.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
config/: prometheus.yml
config/nginx/: nginx.conf
config/prometheus/: alerts.yml
docker/: celery-worker.Dockerfile
docs/: RUNBOOK.md  USAGE.md
scripts/: backup.bat  backup.sh  cleanup.bat  cleanup.sh  fetch.bat  fetch.sh  init-db.sql  logs-dashboard.bat  logs-uploader.bat  logs-worker.bat  logs.bat  logs.sh  open-dashboard.bat  open-grafana.bat  open-tiktok-login.bat  restart.bat  restore.bat  restore.sh  run-tests.bat  run-tests.sh  setup.bat  setup.sh  start.bat  start.sh  status.bat  status.sh  stop.bat  stop.sh
services/approval_dashboard/: Dockerfile  requirements.txt
services/reddit_fetch/: Dockerfile  requirements.txt
services/text_processor/: Dockerfile  __init__.py  requirements.txt
services/tts_service/: Dockerfile  __init__.py  requirements.txt
services/uploader/: Dockerfile  login-chrome.bat  login.bat  package-lock.json  package.json
services/video_renderer/: Dockerfile  __init__.py  requirements.txt
shared/: __init__.py
shared/python/: __init__.py  pyproject.toml  setup.py
shared/python/celery_app/: __init__.py  app.py  tasks.py
shared/python/db/: __init__.py  connection.py  models.py
shared/python/email/: __init__.py  notifier.py
shared/python/logging/: __init__.py  elastic_handler.py
shared/python/monitoring/: __init__.py  health.py  logging.py  metrics.py  server.py
shared/python/rate_limiter/: __init__.py  limiter.py
shared/python/tests/: __init__.py  test_db_models.py  test_email.py  test_logging.py  test_metrics.py
tests/integration/: __init__.py  test_docker.py  (+2 more)
(+38 files in other folders)
